bug fixes for Grid spacing

--- a/src/components/AdminPage/AdminPage.css
+++ b/src/components/AdminPage/AdminPage.css
@@ -1,3 +1,5 @@
-.DataGrid {
+.adminDataGrid {
     display: flex;
+    padding: 30px;
+    height: 300px;
 }
